trying out markdown

--- a/index.html
+++ b/index.html
@@ -24,9 +24,28 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<section>
+					<h1>Kidnapped By Pirates</h1>
+				</section>
 				<section>Once Upon A Time... </section>
 				<section>On an island called Tortuga... </section>
 				<section>The End</section>
+
+ 				<section data-transition="convex" data-markdown data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
+                    <script type="text/template">
+                        ## Kidnapped By Pirates 
+                           Once Upon A Time...
+
+                        --
+
+                        On an island called Tortuga...
+
+                        ---
+
+                        The End 
+                    </script>
+                </section>
+
 			</div>
 		</div>
 
