--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<section>On an island called Tortuga... </section>
 				<section>The End</section>
 
- 				<section data-markdown data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
+ 				<section data-markdown data-separator="^\n---\n$">
                     			<script type="text/template">
                        			 ## Kidnapped By Pirates 
                           			 Once Upon A Time...
