--- a/index.html
+++ b/index.html
@@ -31,17 +31,13 @@
 				<section>On an island called Tortuga... </section>
 				<section>The End</section>
 
- 				<section data-markdown data-separator="^\n---\n$">
+ 				<section data-markdown data-separator="---">
                     			<script type="text/template">
                        			 ## Kidnapped By Pirates 
                           			 Once Upon A Time...
-
                         		---
-
                         		On an island called Tortuga...
-
                        			---
-
                         		The End 
                    			</script>
                 		</section>
